--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </section>
 
-  <section class="resume-section" id="Education">
+  <section class="resume-section" id="education">
     <div class="resume-section-content">
         <h2 class="mb-5">Education</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
