--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="text-primary">Mutai</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Embakasi south,51290-00100 Nairobi Kenya ·
+                        <h1>Embakasi south,51290-00100 Nairobi Kenya</h1>
                         <a href="mailto:name@email.com">denismutai95@gmail.com</a>
                     </div>
                     <p class="lead mb-5">My high level of digital literacy with internet tools and computer applications makes me uniquely qualified to assist you with all of your business needs.</p>
