--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
                 </div>
             </section>
 
+
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Web Developer</h3>
+                    <div class="subheading mb-3">Intelitec Solutions</div>
+                    <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+            </div>
+
+
+
+
+
+
+
+
+
   <section class="resume-section" id="education">
     <div class="resume-section-content">
         <h2 class="mb-5">Education</h2>
